# cookiecutter-data-science

./: .gitignore  COPIER_SUPPORT.md  README.md  STELLARS_CCDS_PHILOSOPHY.md  ccds-help.json  ccds.json  cookiecutter.json  cookiecutter.prompts.yaml  copier.yml  pyproject.toml
.claude/: CLAUDE.md  JOURNAL.md  JOURNAL_ARCHIVE.md  OUR_FORK_DIFFERENTIATORS.md
.claude/commands/: release.md
.github/workflows/: integration-tests.yml  tests.yml
ccds/: monkey_patch.py
ccds/hook_utils/: dependencies.py
copier/: copier.yml
copier/scripts/: build_copier_template.py  copier_post_gen.py
copier/template/: Makefile  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
copier/template/docker/: Dockerfile  entrypoint.py
docs/: STELLARS_CCDS_PHILOSOPHY.md  mkdocs.yml
docs/docs/: copier-support.md  env-management.md  stellars-philosophy.md
docs/scripts/: generate-termynal.py
hooks/: post_gen_project.py
tests/: conda_harness.sh  conftest.py  env_matrix.py  test_copier.py  test_creation.py  test_docker.py  test_github_checkout.py  test_template_sync.py  uv_harness.sh  virtualenv_harness.sh
{{ cookiecutter.repo_name }}/: .gitattributes  .gitignore  MANIFEST.in  Makefile  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
{{ cookiecutter.repo_name }}/docker/: Dockerfile  entrypoint.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.module_name }}/: __init__.py  config.py  dataset.py  features.py  plots.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.module_name }}/modeling/: predict.py  train.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.module_name }}/: config.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.module_name }}/tests/: test_sample.py
