[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.module_name }}"
version = "0.1"
description="{{ cookiecutter.description }}"
authors = [
    {name = "{{ cookiecutter.author_name }}"},
]
license = {text = "{% if cookiecutter.open_source_license == 'MIT' %}MIT{% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}BSD-3{% endif %}"}

requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    "loguru",
    "python-dotenv",
    "typer",
    "tqdm",
]

[tool.setuptools]
include-package-data = true # default value

[tool.setuptools.package-data]
{{ cookiecutter.module_name }} = [ "**/*",]

[tool.setuptools.packages.find]
where = ["."]
include = ["{{ cookiecutter.module_name }}*"]
exclude = ["test", "tests"]

# EOF
