[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = {{ cookiecutter.module_name|tojson }}
version = "0.1.0"
description = {{ cookiecutter.description|tojson }}
authors = [
    { name = {{ cookiecutter.author_name|tojson }} },
]
{% if cookiecutter.open_source_license != 'No license file' -%}
license = { file = "LICENSE" }
{% endif -%}
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version_number }}"
classifiers = [
    "Programming Language :: Python :: 3",
{% if cookiecutter.open_source_license == 'MIT' %}    "License :: OSI Approved :: MIT License",{% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}    "License :: OSI Approved :: BSD License",{% endif %}
]
{%- if cookiecutter.include_code_scaffold == 'Yes' %}

dependencies = [
    "loguru",
    "python-dotenv",
    "typer",
    "tqdm",
]
{%- endif %}
{%- if cookiecutter.environment_manager == 'uv' or (cookiecutter.environment_manager == 'conda' and cookiecutter.dependency_file != 'requirements.txt') %}

[project.optional-dependencies]
dev = [
    "build",
{%- if cookiecutter.jupyter_kernel_support == 'Yes' %}
    "ipykernel",
{%- endif %}
    "ipython",
    "nbdime",
    "pip",
{%- if cookiecutter.docs != 'none' %}
    "{{ cookiecutter.docs }}",
{%- endif %}
{%- if cookiecutter.testing_framework == 'pytest' %}
    "pytest",
    "pytest-cov",
{%- endif %}
    "toml",
{%- if cookiecutter.linting_and_formatting == 'ruff' %}
    "ruff",
{%- elif cookiecutter.linting_and_formatting == 'flake8+black+isort' %}
    "black",
    "flake8",
    "isort",
{%- endif %}
{%- if cookiecutter.dataset_storage.s3 %}
    "awscli",
{%- elif cookiecutter.dataset_storage.gcs %}
    "gsutil",
{%- endif %}
]
{%- endif %}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["{{ cookiecutter.module_name }}*"]
exclude = ["tests*"]
{%- if cookiecutter.linting_and_formatting == 'flake8+black+isort' %}

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["{{ cookiecutter.module_name }}"]
force_sort_within_sections = true
{%- endif %}
{%- if cookiecutter.linting_and_formatting == 'ruff' %}

[tool.ruff]
line-length = 99
src = ["{{ cookiecutter.module_name }}"]
include = ["pyproject.toml", "{{ cookiecutter.module_name }}/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.module_name }}"]
force-sort-within-sections = true
{%- endif %}
